--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,31 +7,29 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all'%> <!--'data-turbolinks-track': 'reload' -->
-    <%= javascript_pack_tag 'application'%> <!--'data-turbolinks-track': 'reload' -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="<%=root_path%>">Gossip Project</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Navbar</a>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link " href="<%=static_page_Team_path%>">La Team <span class="sr-only"></span></a>
+          <a class="nav-link" href="<%=static_page_Contact_path%>">Nous contacter</a>
+          <a class="nav-link" href="#">Se connecter</a>
+          <a class="nav-link " href="<%=new_user_path%>">S'inscrire</a>
+        </div>
+      </div>
+    </nav>
   
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-        <%= link_to "Acceuil", static_page_Home_path %> </a>
-        </li>
-        <li class="nav-item">
-        <%= link_to "Notre Team", static_page_Team_path %>
-        </li>
-        <li class="nav-item">
-        <%= link_to "Nous contacter", static_page_Contact_path %>
-        </li>
-      </ul>
-    </div>
-  </nav>
   </head>
 
   <body>
     <%= yield %>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <%= javascript_pack_tag 'application'%> <!--'data-turbolinks-track': 'reload' -->
   </body>
 </html>
