--- a/app/views/static_page/Home.html.erb
+++ b/app/views/static_page/Home.html.erb
@@ -10,6 +10,8 @@
 
     <p class="text-center" >Voici la liste des potins : </p><br/> 
 
+    <p style="text-align: center;"> Balance ton gossip : <a href="<%=new_gossip_path%>"> créer un gossip </a></p>
+
     	<br> <%= @gossips.each do |gossip| %>
                 <div Align=Center style="flex-direction: row; class="card border-dark mb-3" style="width: 17rem; height: 12rem">
                     <div class="card-header"><%= gossip.title %></div>
