--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,6 +20,7 @@
           <li class="list-group-item"><%= @user.first_name%> <%=@user.last_name%></li>
           <li class="list-group-item">Email : <%= @user.email%></li>
           <li class="list-group-item">Age : <%=@user.age%></li>
+          <li class="list-group-item">Ville : <%= link_to @city.name, city_path(@city.id) %></li>
         </ul>
         <div class="card-body">
           <a href="#" class="card-link">Card link</a>
